--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "next start"
     },
     "dependencies": {
+        "@limwa/react-hooks": "^0.2.0",
         "next": "^11.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
